# art-and-tech

./: LICENSE  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
llm/: __init__.py  image_model.py  model.py
